--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,13 @@
 {
-    "name": "slim/slim-skeleton",
-    "description": "A Slim Framework skeleton application for rapid development",
+    "name": "asheliahut/take-what-you-need-graphql",
+    "description": "GraphQl Example",
     "keywords": ["microframework", "rest", "router", "psr7"],
-    "homepage": "http://github.com/slimphp/Slim-Skeleton",
+    "homepage": "http://github.com/asheliahut/take-what-you-need-graphql",
     "license": "MIT",
     "minimum-stability": "alpha",
     "authors": [
         {
-            "name": "Josh Lockhart",
-            "email": "info@joshlockhart.com",
-            "homepage": "http://www.joshlockhart.com/"
+            "name": "Ashley Hutson"
         }
     ],
     "require": {
